--- a/app/scripts/views/live/videogroups/room.html
+++ b/app/scripts/views/live/videogroups/room.html
@@ -30,7 +30,7 @@
         <!--</span>-->
         <!--</div>-->
         <div class="col-sm-1" ng-show="$last">
-            <a class="btn btn-primary btn-bordered btn-xs" ng-click="ngModel.splice($index, 0, {type: 1, title: ''})">插入章节</a>
+            <a class="btn btn-primary btn-bordered btn-xs" ng-click="ngModel.splice($index, 0, {type: 1, title: ''})">向上新增章节</a>
         </div>
     </div>
 </div>
