--- a/app/scripts/views/live/questions/questions.html
+++ b/app/scripts/views/live/questions/questions.html
@@ -1,4 +1,9 @@
-<div class="dashboard-page ">
+<div class="dashboard-page question">
+    <style>
+        .question .form-group {
+            margin-bottom: 5px;
+        }
+    </style>
     <div class="panel panel-primary">
         <div class="panel-heading">
             <h3 class="panel-title inlineBlock">问题管理</h3>
@@ -58,6 +63,18 @@
                                     <tr>
                                         <td colspan="15">
                                             <span ng-bind="'总数:'+totalItems"></span>
+                                            <p class="pull-right">
+                                                <a class="btn btn-primary btn-bordered btn-sm"
+                                                   ng-click="selected('all')">全选</a>&nbsp;&nbsp;
+                                                <a class="btn btn-primary btn-bordered btn-sm"
+                                                   ng-click="selected('cancel')">全取消</a>&nbsp;&nbsp;
+                                                <a class="btn btn-primary btn-bordered btn-sm"
+                                                   ng-click="selected('reverse')">反选</a>&nbsp;&nbsp;
+                                                <a class="btn btn-danger btn-rounded btn-sm"
+                                                   ng-click="audit(3)">审核不通过</a>&nbsp;&nbsp;
+                                                <a class="btn btn-success btn-rounded btn-sm"
+                                                   ng-click="audit(2)">审核通过</a>&nbsp;&nbsp;
+                                            </p>
                                         </td>
                                     </tr>
                                     <tr>
@@ -65,8 +82,8 @@
                                         <th class="text-center" style="width: 50px;">用户</th>
                                         <th class="text-center" style="width: 150px;">手机</th>
                                         <th class="text-center" style="width: 100px;">角色</th>
-                                        <th class="text-center" style="width: 150px;">回答</th>
-                                        <th class="text-center" style="width: 150px;">内容</th>
+                                        <th class="text-center" style="width: 50px;">回答</th>
+                                        <th class="text-center">内容</th>
                                         <th class="text-center" style="width: 150px;">图片</th>
                                         <th class="text-center" style="width: 150px;">创建时间</th>
                                         <th class="text-center" style="width: 150px;">状态</th>
@@ -88,7 +105,7 @@
                                             <a class="btn btn-primary btn-bordered btn-sm"
                                                ng-bind="item.answer_num" ng-click="open_answer(item)"></a>
                                         </td>
-                                        <td class="text-center"><span ng-bind="item.content"></span></td>
+                                        <td class="text-left"><span ng-bind="item.content"></span></td>
                                         <td class="text-center">
                                             <show_image url="item.pics[0].pic_url" width="100"></show_image>
                                         </td>
@@ -103,22 +120,6 @@
                                                        ng-false-value="false">
                                                 <span></span>
                                             </label>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="text-center" colspan="15">
-                                            <p class="pull-right">
-                                                <a class="btn btn-primary btn-bordered btn-sm"
-                                                   ng-click="selected('all')">全选</a>&nbsp;&nbsp;
-                                                <a class="btn btn-primary btn-bordered btn-sm"
-                                                   ng-click="selected('cancel')">全取消</a>&nbsp;&nbsp;
-                                                <a class="btn btn-primary btn-bordered btn-sm"
-                                                   ng-click="selected('reverse')">反选</a>&nbsp;&nbsp;
-                                                <a class="btn btn-danger btn-rounded btn-sm"
-                                                   ng-click="audit(3)">审核不通过</a>&nbsp;&nbsp;
-                                                <a class="btn btn-success btn-rounded btn-sm"
-                                                   ng-click="audit(2)">审核通过</a>&nbsp;&nbsp;
-                                            </p>
                                         </td>
                                     </tr>
                                     </tbody>
