--- a/app/scripts/views/biz/record_rooms/update.html
+++ b/app/scripts/views/biz/record_rooms/update.html
@@ -67,7 +67,7 @@
                                 <a class="btn btn-primary btn-rounded" ng-click="getDuration()">获取时长</a>
                             </div>
                         </div>
-                        <div form-input text="视频时长" ng-model="param.record.video_duration" placeholder="视频时长:秒"
+                        <div form-input text="视频时长" ng-model="param.video_seconds" placeholder="视频时长:秒"
                              required="true"></div>
 
                         <div form-input text="视频宽度" ng-model="param.record.video_width" placeholder="视频宽度"
