--- a/app/scripts/views/directive/hjm/hjm-form-err-block.html
+++ b/app/scripts/views/directive/hjm/hjm-form-err-block.html
@@ -1,7 +1,9 @@
 <div class="panel panel-primary" ng-show="FormBody.$invalid">
     <div class="panel-body">
         <h5>表单验证提示</h5>
-        <!--<div ng-repeat="(key,val) in FormBody" ng-if="val.$invalid&&val.$name">-->
+        <!--<textarea class="form-control" rows="200" ng-bind="FormBody|json"></textarea>-->
+        <!--<div ng-repeat="(key,val) in FormBody" >-->
+            <!--ng-if="val.$invalid && val.$name"-->
         <!--<span ng-bind="val|json"></span><br/>-->
         <!--</div>-->
         <ul class="list-group col-sm-8 col-sm-offset-2">
