--- a/app/scripts/views/biz/live_rooms/update.html
+++ b/app/scripts/views/biz/live_rooms/update.html
@@ -88,11 +88,14 @@
                              placeholder="HLS(m3u8)"></div>
                         <div form-input text="流畅FLV" ng-model="param.cloud.fluency_flv_url" placeholder="FLV"></div>
 
+                        <div form-input text="视频时长" ng-model="param.video_seconds" placeholder="视频时长:秒"
+                             required="true"></div>
+
                         <div form-radio text="苹果审核标志" type="radio" ng-model="param.ios_audit" required="true"
                              default="2"
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
 
-                        <div form-rich-text text="看点" ng-model="param.watch_point" placeholder="看点"></div>
+                        <!--<div form-rich-text text="看点" ng-model="param.watch_point" placeholder="看点"></div>-->
                         <div live-point text="看点" ng-model="param.points"></div>
                     </div>
                 </div>
