--- a/app/scripts/views/biz/live_rooms/update.html
+++ b/app/scripts/views/biz/live_rooms/update.html
@@ -88,8 +88,8 @@
                              placeholder="HLS(m3u8)"></div>
                         <div form-input text="流畅FLV" ng-model="param.cloud.fluency_flv_url" placeholder="FLV"></div>
 
-                        <div form-input text="视频时长" ng-model="param.video_seconds" placeholder="视频时长:秒"
-                             required="true"></div>
+                        <!--<div form-input text="视频时长" ng-model="param.video_seconds" placeholder="视频时长:秒"-->
+                             <!--required="true"></div>-->
 
                         <div form-radio text="苹果审核标志" type="radio" ng-model="param.ios_audit" required="true"
                              default="2"
