验证form表单中的复杂数据模型 例子是： 图片

--- a/app/scripts/views/demo/test.html
+++ b/app/scripts/views/demo/test.html
@@ -12,6 +12,7 @@
             <form class="form-horizontal" name="FormBody" novalidate>
                 <div class="panel panel-primary">
                     <div class="panel-body">
+                        <div form-image text="图片" ng-model="param.pics" hide-bar="[0,0,1,1]" max="8" required="true"></div>
                         <div live-point text="看点" ng-model="param.points"></div>
                     </div>
                     <div form-error-block></div>
